# peel-ip

./: Cargo.toml  graph.dot
src/: lib.rs
src/layer1/: arp.rs  ethernet.rs  mod.rs
src/layer2/: icmp.rs  icmpv6.rs  ipv4.rs  ipv6.rs  mod.rs
src/layer3/: mod.rs  tcp.rs  tls.rs  udp.rs
src/layer4/: http.rs  ntp.rs
